Fix Java 8 incompatibility in CompileTimeValidationTest
List.of(...) is Java 9+; this project targets and CI compiles with JDK 8
(-source/-target 8), where it doesn't exist. It compiled locally because
building with a JDK 21 javac and -source 8 but no real 8 bootclasspath
lets newer JDK APIs slip through undetected - exactly the hazard javac's
own "bootstrap class path not set in conjunction with -source 8" warning
describes. Confirmed against a real Temurin JDK 8 locally (matching CI's
actual java-version: 8 setup) both before (reproduced the same two
"cannot find symbol: method of(...)" errors CI hit) and after this fix
(mvn clean test and mvn install -DskipTests both pass).

Replaced with Collections.singletonList(...), consistent with the rest
of the codebase's Java 8 target.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01EmRMGLsuLwAQFxfRAQ1Fz7